# symbiotica

./: .dockerignore  .gitignore  Dockerfile  Makefile.PL  README.md  cpanfile  installer.sh  pyproject.toml
data/: motifs.txt
examples/: symbiotica_matches.gff  symbiotica_matches.tsv
lib/: Parser.pm
lib/Symbiotica/: Finder.pm  Motifs.pm  Parser.pm  Reporter.pm
symbiotica/lib/Symbiotica/: Printer.pm  Reporter.pm
symbiotica_py/: __main__.py  cli.py  plotter.py  tools.py
sympy/: __main__.py
sympy/lib/: plotter.py  tools.py
